<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_new_task"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.lohan.itslife.NewTask">
    <android.support.v7.widget.Toolbar
        android:id="@+id/task_toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <EditText
            android:id="@+id/task_title_editText"
            android:layout_alignParentTop="true"
            android:hint="Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/task_note_editText"
            android:layout_below="@id/task_title_editText"
            android:layout_width="match_parent"
            android:hint="Note"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/task_repeat_button"
            android:layout_below="@id/task_note_editText"
            android:text="Repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        <LinearLayout
            android:id="@+id/task_inLabel_linearLayout"
            android:layout_below="@id/task_repeat_button"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/in_label"/>
            <Spinner
                android:id="@+id/task_inLabel_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                ></Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/task_startDate_linearLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_inLabel_linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <Button
                android:id="@+id/task_startDate_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Date"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            <Button
                android:id="@+id/task_startDate_Today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Today"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            <Button
                android:id="@+id/task_startDate_Tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tomorrow"
                style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/task_importance_linearLayout"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/task_startDate_linearLayout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/importance"/>
            <Spinner
                android:id="@+id/task_importance_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                ></Spinner>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/task_trivial_linearLayout"
            android:layout_below="@id/task_importance_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/task_trivial_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trivial"
                />
            <Switch
                android:id="@+id/task_trivial_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/task_revise_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revise"/>
            <EditText
                android:id="@+id/task_revise_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/task_trivial_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed"/>
            <Switch
                android:id="@+id/task_completed_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
